# Binocular-Robot

./: CMakeLists.txt  README.md  package.xml
GimbalNode/: GimbalNode.ino
launch/: create_point_cloud.launch  object_recognition.launch  test_images.launch
msg/: ImageArray.msg  Objects.msg
src/: calibrate.py  captureImages.py  computePointCloud.py  createDisparityMap.py  gimbal_control.py  objectRecognition.py  rectifyImages.py  test_images.py  utils.py
